<resources>
    <string name="app_name">Marvel</string>
    <string name="label_choose_character">Choose Character</string>
    <string name="label_character_name">Name</string>
    <string name="label_realname">Real Name</string>
    <string name="label_height">Height</string>
    <string name="label_power">Power</string>
    <string name="label_abilities">Abilities</string>
    <string name="label_groups">Groups</string>
    <string name="label_exit">Exit</string>
</resources>
