<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:weightSum="3">

            /Spinner
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/color_background_spinner"
                android:padding="4dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/textviewChooseCharacter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textColor="@color/color_text_black"
                    android:text="@string/label_choose_character" />

                <Spinner
                    android:id="@+id/spinnerFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="3" />
            </LinearLayout>

            /Linear
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="4dp"
                android:weightSum="6">

                /Row 0: Name and ImageView
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/color_text_white"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/imageViewPhoto"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_weight="1"
                        android:background="@color/color_background_icon" />

                </LinearLayout>

                /Row 1: RealName
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/textViewLabelRealName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_text_white"
                        android:text="@string/label_realname" />

                    <TextView
                        android:id="@+id/textViewRealName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/color_text_white"
                        android:layout_weight="4" />

                </LinearLayout>

                /Row 2: Height
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/textViewLabelHeight"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_text_white"
                        android:text="@string/label_height" />

                    <TextView
                        android:id="@+id/textViewHeight"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/color_text_white"
                        android:layout_weight="4"/>

                </LinearLayout>

                /Row 3: Power
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/textViewLabelPower"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_text_white"
                        android:text="@string/label_power" />

                    <TextView
                        android:id="@+id/textViewPower"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/color_text_white"
                        android:layout_weight="4" />
                </LinearLayout>

                /Row 4: Abilities
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:weightSum="5">
                    <TextView
                        android:id="@+id/textViewLabelAbilities"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_text_white"
                        android:text="@string/label_abilities" />

                    <TextView
                        android:id="@+id/textViewAbilities"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/color_text_white"
                        android:layout_weight="4" />
                </LinearLayout>

                /Row 5: Groups
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/textViewLabelGroupse"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_text_white"
                        android:text="@string/label_groups" />

                    <TextView
                        android:id="@+id/textViewGroups"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/color_text_white"
                        android:layout_weight="4" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>